[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/textures/enemy-1.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/light-shot-particle.png" type="Texture" id=2]
[ext_resource path="res://actors/enemies/hydra/hydra.gd" type="Script" id=3]
[ext_resource path="res://actors/enemies/enemy-states-machine.gd" type="Script" id=4]
[ext_resource path="res://actors/enemies/flash.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/yellow = Color( 0.941176, 0.909804, 0.458824, 1 )
shader_param/flash_white = 0.0
shader_param/flash_yellow = 0.0
shader_param/flash_invisible = 0.0

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=1]
resource_name = "ready"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "shot"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 8 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 10 )

[node name="Hydra" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 167
script = ExtResource( 3 )
max_hp = 5

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 1 )
vframes = 3
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 5 )
anims/ready = SubResource( 1 )
anims/shot = SubResource( 6 )

[node name="Hurtbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1, 4 )
shape = SubResource( 2 )

[node name="ChargeParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -8 )
emitting = false
amount = 16
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 16.0
gravity = Vector2( 0, 0 )
radial_accel = -100.0
color = Color( 0.941176, 0.909804, 0.458824, 1 )

[node name="ChargeBall" type="Sprite" parent="."]
visible = false
modulate = Color( 0.941176, 0.909804, 0.458824, 1 )
position = Vector2( 0, -8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="ShotHitbox" type="Area2D" parent="."]
visible = false
position = Vector2( -2, 0 )
collision_layer = 32
collision_mask = 50
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="ShotHitbox"]
shape = SubResource( 7 )
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2( 1, 4 )
collision_layer = 64
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 1, 2 )

[node name="StatesMachine" type="Node2D" parent="."]
script = ExtResource( 4 )
[connection signal="area_entered" from="ShotHitbox" to="." method="_on_ShotHitbox_area_entered"]
[connection signal="body_entered" from="ShotHitbox" to="." method="_on_ShotHitbox_body_entered"]
